--- a/src/resources/database.properties
+++ b/src/resources/database.properties
@@ -1,5 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-
-jdbc.url=jdbc:mysql://127.0.0.1:3306/mybatis?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/movie?useUnicode=true&characterEncoding=utf8
 jdbc.user=root
 jdbc.password=123456
