add admin intercepor

--- a/src/resources/message.properties
+++ b/src/resources/message.properties
@@ -8,4 +8,7 @@ username.exist = username exist
 useremail.exist = iseremail exist
 useremail.notexist = email notexist
 userpasswd.error = password error
-
+video.name.required = name not empty
+video.type.required = type not empty
+video.score.required = video score not empty
+video.score.error = video score error
