--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,13 @@
             <version>1.7.21</version>
         </dependency>
 
+        <!-- 日期格式类型的转化 -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
