add vip role and vipPlus permission

--- a/src/resources/message.properties
+++ b/src/resources/message.properties
@@ -12,3 +12,4 @@ video.name.required = name not empty
 video.type.required = type not empty
 video.score.required = video score not empty
 video.score.error = video score error
+video.starring.error = must less then 12
